Updated README.md
Updated the main README.md file to reflect new project owner, group, and version.  Added section on the additionalCompilerArgs feature.